<resources>
    <string name="app_name">Spataro Nápoli S.A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email">Correo</string>
    <string name="doc_type">Tipo de documento</string>
    <string name="admin">ADMINISTRADOR</string>
    <string name="seller">VENDEDOR</string>
    <string name="num_doc">Número de Documento</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="country">País</string>
    <string name="city">Ciudad</string>
    <string name="und_mts">El archivo está en metros o unidades?</string>
    <string name="select_file">Seleccionar Archivo</string>
    <string name="update_references">ACTUALIZAR REFERENCIAS</string>
    <string name="select_client">Seleccionar Cliente</string>
    <string name="select_date">Seleccionar Fecha</string>
    <string name="search_ref">Buscar Referencia</string>
    <string name="select_ref">Seleccionar Referencia</string>
    <string name="quantity">Cantidad</string>
</resources>