<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.reference_screen.Reference"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.spataroapp.presentation.reference_screen.ReferenceViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_type_file"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:hint="@string/und_mts"
            app:startIconDrawable="@drawable/file_type">

            <AutoCompleteTextView
                android:id="@+id/input_file_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/textInputColor"
                android:enabled="false"
                android:inputType="none"
                android:text="@={viewModel.fileType}"
                android:textColor="#000"></AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_file"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:text="@string/select_file"
            app:icon="@drawable/attach_file"
            app:iconGravity="textEnd" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadFile"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:text="@string/update_references"
            app:icon="@drawable/check"
            app:backgroundTint="@android:color/background_dark"
            app:iconGravity="textEnd"
            android:onClick="@{() -> viewModel.uploadFile()}"/>
</LinearLayout>
</layout>